[project]
name = "jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "ipykernel>=6.29.5",
    "gradio>=5.22.0",
    "ipywidgets>=8.1.5",
    "pydantic>=2.11.7",
]
